# CDF

./: .pre-commit-config.yaml  pyproject.toml
csv_extractor/: __main__.py  config.py
